Reorganize container styling for classes. Add a fix on smaller desktops. Hide overflow-x.

--- a/styles/_mediaQuery.scss
+++ b/styles/_mediaQuery.scss
@@ -9,12 +9,12 @@
   }
 }
 @mixin for-tablet-landscape-up {
-  @media (min-width: 900px) and(max-width: 1199px) {
+  @media (min-width: 900px) and (max-width: 1199px) {
     @content;
   }
 }
 @mixin for-desktop-up {
-  @media (max-width: 1799px) {
+  @media (min-width: 1200px) and (max-width: 1799px) {
     @content;
   }
 }
